# llm_reviewer

./: .gitignore  LICENSE  README.md  clean_json.sh  main.py  pyproject.toml  transform.py
adaptation_reviewer/: cli.py  download.py  process.py  transform.py  utils.py
analysis/: descriptives.ipynb
src/: download_papers.py
tests/: conftest.py  test_create_db.py  test_transform.py
