[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
  {name = "Iván Higuera-Mendieta", email = "ihigueme@stanford.ed"},
  {name = "Marshall Burke", email = "mburke@stanford.edu"},
]
dynamic = ["version"]
name = "adaptation-reviwer"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">= 3.11"
